[package]
name = "work-quest-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13"
ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
async-trait = "0.1.51"
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "e362530172c44679313b1b7fca1e90d8967545d8" }
ic-cdk = { git = "https://github.com/hpeebles/cdk-rs.git", rev = "3b7e75520f6c007b84ceff0be376fda017c5e742" }
ic-cdk-macros = { git = "https://github.com/hpeebles/cdk-rs.git", rev = "3b7e75520f6c007b84ceff0be376fda017c5e742" }
ic-nns-constants = { git = "https://github.com/dfinity/ic", rev = "e362530172c44679313b1b7fca1e90d8967545d8" }
ledger-canister = { git = "https://github.com/dfinity/ic", rev = "e362530172c44679313b1b7fca1e90d8967545d8" }
serde = "1.0.129"
types = { path = "../../../libraries/types" }